--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Welcome to My Github Page
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title> ajayz Github Page </title>
+    </head>
+    <body>
+        <p> Welcome to My Github Page </p>
+    </body>
+</html>
+
